--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <use href="images/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
-          <li class="nav__item"><a href="#">Geral</a></li>
-          <li class="nav__item"><a href="#">Entrevistas</a></li>
-          <li class="nav__item"><a href="#">Comunidades</a></li>
-          <li class="nav__item"><a href="#">Mais</a></li>
+          <li class="nav__item"><a href="https://helenapedro.github.io/about.html">Geral</a></li>
+          <li class="nav__item"><a href="https://helenapedro.github.io/about.html">Entrevistas</a></li>
+          <li class="nav__item"><a href="https://helenapedro.github.io/about.html">Comunidades</a></li>
+          <li class="nav__item"><a href="https://helenapedro.github.io/about.html">Mais</a></li>
         </ul>
       </nav>
     </header>
@@ -196,7 +196,7 @@
             O Team Expertise vai direto ao ponto e diz o que você precisa saber
             para se destacar em suas entrevistas técnicas.
           </p>
-          <a href="#" class="link-arrow">Saiba Mais</a>
+          <a href="https://helenapedro.github.io/about.html" class="link-arrow">Saiba Mais</a>
         </div>
         <picture data-aos="zoom-in-left">
           <source
@@ -226,7 +226,7 @@
             <li class="list__item"> Menu de navegação</li>
             <li class="list__item">Fundo de cada page</li>
           </ul>
-          <a href="#" class="link-arrow">Publicite Conosco</a>
+          <a href="https://helenapedro.github.io/about.html" class="link-arrow">Publicite Conosco</a>
         </div>
         <picture data-aos="zoom-in-right">
           <source
@@ -251,7 +251,7 @@
             como se preparar para uma entrevista de engenheiro de software - rodadas 
             de entrevista técnica e não técnica. 
           </p>
-          <a href="#" class="link-arrow">Saiba Mais</a>
+          <a href="https://helenapedro.github.io/about.html" class="link-arrow">Saiba Mais</a>
         </div>
         <picture data-aos="zoom-in-left">
           <source
@@ -278,7 +278,7 @@
             engenheiros de software. Este guia ensina como maximizar essa chance de 
             impressionar o entrevistador, elaborando a auto-introdução perfeita.
           </p>
-          <a href="#" class="link-arrow">Learn More</a>
+          <a href="https://helenapedro.github.io/about.html" class="link-arrow">Saiba Mais</a>
         </div>
         <picture data-aos="zoom-in-right">
           <source
@@ -468,7 +468,7 @@
               de Engenheiros de Software de alta qualidade da Expertise.
             </p>
           </div>
-          <a href="#" class="btn btn--secondary btn--stretched"
+          <a href="https://helenapedro.github.io/about.html" class="btn btn--secondary btn--stretched"
             >Atualizar CV</a
           >
         </div>
@@ -485,9 +485,9 @@
           </div>
           <div class="collapsible__content">
             <ul class="list">
-              <li><a href="#">Comece a ler</a></li>
-              <li><a href="#">Ver um currículo pronto</a></li>
-              <li><a href="#">Teste Psicotécnico</a></li>
+              <li><a href="https://helenapedro.github.io/about.html">Comece a ler</a></li>
+              <li><a href="https://helenapedro.github.io/about.html">Ver um currículo pronto</a></li>
+              <li><a href="https://helenapedro.github.io/about.html">Teste Psicotécnico</a></li>
             </ul>
           </div>
         </section>
@@ -500,9 +500,9 @@
           </div>
           <div class="collapsible__content">
             <ul class="list">
-              <li><a href="#">Plano de estudo para entrevista</a></li>
-              <li><a href="#">Entrevista Técnica</a></li>
-              <li><a href="#">Entrevista Comportamental</a></li>
+              <li><a href="https://helenapedro.github.io/about.html">Plano de estudo para entrevista</a></li>
+              <li><a href="https://helenapedro.github.io/about.html">Entrevista Técnica</a></li>
+              <li><a href="https://helenapedro.github.io/about.html">Entrevista Comportamental</a></li>
             </ul>
           </div>
         </section>
@@ -515,9 +515,9 @@
           </div>
           <div class="collapsible__content">
             <ul class="list">
-              <li><a href="#">Github</a></li>
-              <li><a href="#">LeetCode</a></li>
-              <li><a href="#">Linkedin</a></li>
+              <li><a href="https://helenapedro.github.io/about.html">Github</a></li>
+              <li><a href="https://helenapedro.github.io/about.html">LeetCode</a></li>
+              <li><a href="https://www.linkedin.com/in/helena-mbeua-pedro/">Linkedin</a></li>
             </ul>
           </div>
         </section>
@@ -530,9 +530,9 @@
           </div>
           <div class="collapsible__content">
             <ul class="list">
-              <li><a href="#">Manual de Entrevista Front-End</a></li>
-              <li><a href="#">Manual de Entrevista Back-End</a></li>
-              <li><a href="#">Fale Conosco</a></li>
+              <li><a href="https://helenapedro.github.io/about.html">Manual de Entrevista Front-End</a></li>
+              <li><a href="https://helenapedro.github.io/about.html">Manual de Entrevista Back-End</a></li>
+              <li><a href="https://helenapedro.github.io/about.html">Fale Conosco</a></li>
             </ul>
           </div>
         </section>
