--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <p class="hero__tagline">
             Um Roteiro para alcançar a proficiência.
           </p>
-          <a href="" class="btn btn--accent btn--stretched">Começar</a>
+          <a href="https://helenapedro.github.io/about.html" class="btn btn--accent btn--stretched">Começar</a>
         </header>
         <picture data-aos="zoom-in">
           <source
